force-app/main/default/objects/Loan_Offer__c/Loan_Offer__c.object-meta.xml
<CustomObject>
    <description>Represents a Loan Offer</description>
    <label>Loan Offer</label>
    <nameField>
        <label>Loan Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>