force-app/main/default/objects/Loan_Offer__c/fields/Administrative_Fee__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Fee__c</fullName>
    <label>Administrative Fee</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>