force-app/main/default/objects/Loan_Offer__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <description>Represents  the standard interest rate on this loan offer.</description>
    <label>Interest</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>